packages/yew-macro/tests/html_macro/html-component-unimplemented-fail.stderr
error[E0599]: the function or associated item `new` exists for struct `VChild<Unimplemented>`, but its trait bounds were not satisfied
 --> $DIR/html-component-unimplemented-fail.rs:8:14
  |
5 | struct Unimplemented;
  | --------------------- doesn't satisfy `Unimplemented: yew::Component`
...
8 |     html! { <Unimplemented /> };
  |              ^^^^^^^^^^^^^ function or associated item cannot be called on `VChild<Unimplemented>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Unimplemented: yew::Component`

error[E0277]: the trait bound `Unimplemented: yew::Component` is not satisfied
 --> $DIR/html-component-unimplemented-fail.rs:8:14
  |
8 |     html! { <Unimplemented /> };
  |              ^^^^^^^^^^^^^ the trait `yew::Component` is not implemented for `Unimplemented`
